sphone-deployment/overlays/development/patches/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sphone-api
  namespace: sphone
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: sphone-api
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
