sphone-deployment/overlays/development/patches/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sphone-ingress
  namespace: sphone
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: sphone.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: sphone-api
                port:
                  name: http
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sphone-app
                port:
                  name: http
